<resources>
    <string name="app_name">Todo Application</string>
    <string name="logo_content_description">ontime application logo</string>
    <string name="button_notifications_content_description">notifications</string>
    <string name="button_more_content_description">more</string>
    <string name="switcher_schedule_title">Расписание</string>
    <string name="switcher_notes_title">Заметки</string>
    <string name="floating_action_button_desc">add schedule or note</string>
    <string name="pinned_status">pinned status</string>
    <string name="search">Поиск заметок</string>
    <string name="button_back_content_description">go back button</string>
    <string name="button_pin_content_description">pin note</string>
    <string name="add_note">Добавить заметку</string>
    <string name="add_schedule">Добавить расписание</string>
    <string name="title_hint">Название</string>
    <string name="body_hint">Ваш текст</string>
    <string name="floating_action_button_schedule_desc">add schedule</string>
    <string name="floating_action_button_note_desc">add note</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_delete">Удалить</string>
    <string name="confirm_deletion_title">Удалить заметку?</string>
    <string name="confirm_deletion_description">Заметка будет удалена без возможности восстановления</string>
    <string name="confirm_deletion_accept">Удалить</string>
    <string name="confirm_deletion_decline">Отменить</string>
</resources>