<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_background"
    android:fitsSystemWindows="true"
    tools:context=".presentation.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:contentDescription="@null"
        android:src="@drawable/main_activity_top_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:background="#00FFFFFF"
        android:contentInsetStart="0dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/logo_content_description"
            android:src="@drawable/baseline_logo_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Buttons -->

        <ImageButton
            android:id="@+id/button_more"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="@string/button_more_content_description"
            android:src="@drawable/baseline_more_24"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="7dp" />

        <ImageButton
            android:id="@+id/button_notifications"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_toStartOf="@id/button_more"
            android:background="@null"
            android:contentDescription="@string/button_notifications_content_description"
            android:src="@drawable/baseline_notifications_24" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/fragment_switcher"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/switch_to_schedule"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="2dp"
            android:height="45dp"
            android:fontFamily="@font/nunito_semibold"
            android:minHeight="45dp"
            android:text="@string/switcher_schedule_title"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/switch_to_notes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:height="45dp"
            android:fontFamily="@font/nunito_semibold"
            android:minHeight="45dp"
            android:text="@string/switcher_notes_title"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/background_tint_for_fab"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E60A0A23"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#CCC2FE"
        android:clickable="true"
        android:contentDescription="@string/floating_action_button_desc"
        android:focusable="true"
        android:src="@drawable/baseline_add_50"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="20dp"
        app:shapeAppearanceOverlay="@style/FloatingActionButtonExt"
        app:tint="#000000" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/schedule_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#CCC2FE"
        android:clickable="true"
        android:contentDescription="@string/floating_action_button_schedule_desc"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/baseline_new_schedule_50"
        android:visibility="gone"
        app:fabCustomSize="45dp"
        app:layout_constraintBottom_toTopOf="@+id/main_fab"
        app:layout_constraintEnd_toEndOf="@+id/main_fab"
        app:layout_constraintStart_toStartOf="@+id/main_fab"
        app:maxImageSize="20dp"
        app:shapeAppearanceOverlay="@style/FloatingActionButtonExt"
        app:tint="#000000"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/schedule_textView"
        style="@style/AppNoteFABDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/add_schedule"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/schedule_fab"
        app:layout_constraintEnd_toStartOf="@+id/schedule_fab"
        app:layout_constraintTop_toTopOf="@+id/schedule_fab"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/note_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#CCC2FE"
        android:clickable="true"
        android:contentDescription="@string/floating_action_button_note_desc"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/baseline_new_note_50"
        android:visibility="gone"
        app:fabCustomSize="45dp"
        app:layout_constraintBottom_toTopOf="@+id/schedule_fab"
        app:layout_constraintEnd_toEndOf="@+id/main_fab"
        app:layout_constraintStart_toStartOf="@+id/main_fab"
        app:maxImageSize="20dp"
        app:shapeAppearanceOverlay="@style/FloatingActionButtonExt"
        app:tint="#000000"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/note_textView"
        style="@style/AppNoteFABDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/add_note"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/note_fab"
        app:layout_constraintEnd_toStartOf="@+id/note_fab"
        app:layout_constraintTop_toTopOf="@+id/note_fab"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
