<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="title" type="String" />
        <variable name="body" type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7E64FF"
        android:fitsSystemWindows="true"
        tools:context=".presentation.NoteActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:background="#00FFFFFF"
            android:contentInsetStart="0dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Back -->
            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:background="@null"
                android:contentDescription="@string/button_back_content_description"
                android:src="@drawable/baseline_arrow_left_24" />

            <!-- Buttons -->
            <ImageButton
                android:id="@+id/button_more"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@null"
                android:contentDescription="@string/button_more_content_description"
                android:src="@drawable/baseline_more_24" />

            <ImageButton
                android:id="@+id/button_pin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@null"
                android:contentDescription="@string/button_pin_content_description"
                android:src="@drawable/baseline_thumbtack_24"
                tools:layout_editor_absoluteX="283dp"
                tools:layout_editor_absoluteY="12dp" />

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

            <EditText
                android:id="@+id/editTextText"
                style="@style/AppNoteTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#00FFFFFF"
                android:ems="10"
                android:text="@{title}"
                android:hint="Название"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:queryBackground="@null" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                style="@style/AppNoteBodyView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:ems="10"
                android:gravity="start|top"
                android:text="@{body}"
                android:hint="Ваш текст"
                android:inputType="textMultiLine|textCapSentences"
                android:padding="10dp"
                android:queryBackground="@null" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>